Fix file paths for deployment

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
               <div class="flex items-center gap-4">
                 <div
                   class="w-16 h-16 rounded-2xl bg-white flex items-center justify-center group-hover:scale-110 transition-transform shadow-sm border border-gray-100 dark:border-gray-800">
-                  <img src="./logo samcon.jpeg" alt="Samwha" class="w-10 h-10 object-contain">
+                  <img src="./logo-samcon.jpeg" alt="Samwha" class="w-10 h-10 object-contain">
                 </div>
                 <div>
                   <h3 class="text-xl font-bold dark:text-white">Quality Control</h3>
@@ -326,7 +326,7 @@
               <div class="flex items-center gap-4">
                 <div
                   class="w-16 h-16 rounded-2xl bg-white flex items-center justify-center group-hover:scale-110 transition-transform shadow-sm border border-gray-100 dark:border-gray-800">
-                  <img src="./logo bkkbn.png" alt="BKKBN" class="w-10 h-10 object-contain">
+                  <img src="./logo-bkkbn.png" alt="BKKBN" class="w-10 h-10 object-contain">
                 </div>
                 <div>
                   <h3 class="text-xl font-bold dark:text-white">GenRe Ambassador of Subang – Best Advocacy.</h3>
@@ -353,7 +353,7 @@
               <div class="flex items-center gap-4">
                 <div
                   class="w-16 h-16 rounded-2xl bg-white flex items-center justify-center group-hover:scale-110 transition-transform shadow-sm border border-gray-100 dark:border-gray-800">
-                  <img src="./logo bkkbn.png" alt="Forum Anak" class="w-10 h-10 object-contain">
+                  <img src="./logo-bkkbn.png" alt="Forum Anak" class="w-10 h-10 object-contain">
                 </div>
                 <div>
                   <h3 class="text-xl font-bold dark:text-white">Vice President Cluster 3</h3>
@@ -683,7 +683,7 @@
               <div
                 class="absolute inset-0 bg-primary/20 group-hover:bg-transparent transition-colors duration-500 z-10">
               </div>
-              <img src="./miss tenager/I am Anvil SalsabilaYour MissTeenager Intellegence West Java 2023-2024sometimes life gave you a  (1).jpg"
+              <img src="./miss-teenager/miss-teenager-2.jpg"
                 alt="E-Commerce Dashboard"
                 class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
               <div class="absolute top-4 right-4 z-20 flex gap-2">
@@ -722,7 +722,7 @@
               <div
                 class="absolute inset-0 bg-secondary/20 group-hover:bg-transparent transition-colors duration-500 z-10">
               </div>
-              <img src="./duta/Proud!!!..jpg"
+              <img src="./duta/proud.jpg"
                 alt="AI SaaS Platform"
                 class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
               <div class="absolute top-4 right-4 z-20 flex gap-2">
@@ -761,7 +761,7 @@
               <div
                 class="absolute inset-0 bg-primary/20 group-hover:bg-transparent transition-colors duration-500 z-10">
               </div>
-              <img src="./inti/[27-11-2025]📍Universitas Pertahanan RIMelalui Diskusi Panel dan Focus Group Discussion, kita me (1).jpg"
+              <img src="./inti/inti-2.jpg"
                 alt="Mobile Banking UI"
                 class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
               <div class="absolute top-4 right-4 z-20 flex gap-2">
@@ -812,10 +812,10 @@ I was responsible as the Vice Project Manager, supporting the activity and ensur
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
           <!-- Gallery Card 1: Skyline Development -->
           <div class="gallery-card group relative rounded-3xl overflow-hidden glass cursor-pointer"
-            data-images='["./duta/Proud!!!..jpg", "./duta/Great Memories..jpg", "./duta/Great Memories. (1).jpg"]'
+            data-images='["./duta/proud.jpg", "./duta/great-memories-1.jpg", "./duta/great-memories-2.jpg"]'
             data-aos="fade-up">
             <div class="relative h-64 overflow-hidden image-container">
-              <img src="./duta/Proud!!!..jpg"
+              <img src="./duta/proud.jpg"
                 class="w-full h-full object-cover transition-opacity duration-500 gallery-img"
                 alt="Dokumentasi Skyline 1">
 
@@ -852,10 +852,10 @@ I was responsible as the Vice Project Manager, supporting the activity and ensur
           <!-- Gallery Card 2: Nova AI Brainstorming -->
           <div class="gallery-card group relative rounded-3xl overflow-hidden glass cursor-pointer"
             style="transition-delay: 100ms"
-            data-images='["./inti/[27-11-2025]📍Universitas Pertahanan RIMelalui Diskusi Panel dan Focus Group Discussion, kita me.jpg", "./inti/[27-11-2025]📍Universitas Pertahanan RIMelalui Diskusi Panel dan Focus Group Discussion, kita me (1).jpg", "./inti/[27-11-2025]📍Universitas Pertahanan RIMelalui Diskusi Panel dan Focus Group Discussion, kita me (2).jpg"]'
+            data-images='["./inti/inti-1.jpg", "./inti/inti-2.jpg", "./inti/inti-3.jpg"]'
             data-aos="fade-up" data-aos-delay="100">
             <div class="relative h-64 overflow-hidden image-container">
-              <img src="./inti/[27-11-2025]📍Universitas Pertahanan RIMelalui Diskusi Panel dan Focus Group Discussion, kita me.jpg"
+              <img src="./inti/inti-1.jpg"
                 class="w-full h-full object-cover transition-opacity duration-500 gallery-img" alt="Dokumentasi Nova 1">
 
               <!-- Navigation Buttons -->
@@ -891,10 +891,10 @@ I was responsible as the Vice Project Manager, supporting the activity and ensur
           <!-- Gallery Card 3: Zenith UI Design -->
           <div class="gallery-card group relative rounded-3xl overflow-hidden glass cursor-pointer"
             style="transition-delay: 200ms"
-            data-images='["./miss tenager/I am Anvil SalsabilaYour MissTeenager Intellegence West Java 2023-2024sometimes life gave you a .jpg", "./miss tenager/I am Anvil SalsabilaYour MissTeenager Intellegence West Java 2023-2024sometimes life gave you a  (1).jpg", "./miss tenager/I am Anvil SalsabilaYour MissTeenager Intellegence West Java 2023-2024sometimes life gave you a  (2).jpg"]'
+            data-images='["./miss-teenager/miss-teenager-1.jpg", "./miss-teenager/miss-teenager-2.jpg", "./miss-teenager/miss-teenager-3.jpg"]'
             data-aos="fade-up" data-aos-delay="200">
             <div class="relative h-64 overflow-hidden image-container">
-              <img src="./miss tenager/I am Anvil SalsabilaYour MissTeenager Intellegence West Java 2023-2024sometimes life gave you a .jpg"
+              <img src="./miss-teenager/miss-teenager-1.jpg"
                 class="w-full h-full object-cover transition-opacity duration-500 gallery-img"
                 alt="Dokumentasi Zenith 1">
 
