--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./unsub-removebg-preview.png" />
+  <link rel="icon" type="image/svg+xml" href="public/tailwind.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Anvil Salsabila | Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
