--- a/index.html
+++ b/index.html
@@ -386,10 +386,13 @@
             <div class="carousel-container relative group mt-6 aspect-video">
               <div class="carousel-track flex overflow-x-auto snap-x snap-mandatory scrollbar-hide gap-4 rounded-2xl h-full">
                 <div class="snap-center shrink-0 w-full h-full rounded-2xl overflow-hidden glass border border-white/10 bg-black/5 dark:bg-white/5 flex items-center justify-center">
-                  <img src="./logo-bkkbn.png" alt="Experience 3" class="w-full h-full object-contain">
+                  <img src="public/duta/1755952930262.jpeg" alt="Experience 3" class="w-full h-full object-contain">
                 </div>
                 <div class="snap-center shrink-0 w-full h-full rounded-2xl overflow-hidden glass border border-white/10 bg-black/5 dark:bg-white/5 flex items-center justify-center">
-                  <img src="./duta/proud.jpg" alt="Experience 3" class="w-full h-full object-contain">
+                  <img src="public/duta/1755952960345.jpeg" alt="Experience 3" class="w-full h-full object-contain">
+                </div>
+                <div class="snap-center shrink-0 w-full h-full rounded-2xl overflow-hidden glass border border-white/10 bg-black/5 dark:bg-white/5 flex items-center justify-center">
+                  <img src="public/duta/1755952986617.jpeg" alt="Experience 3" class="w-full h-full object-contain">
                 </div>
               </div>
               
