--- a/index.html
+++ b/index.html
@@ -499,9 +499,6 @@
                 <div class="snap-center shrink-0 w-full h-full rounded-2xl overflow-hidden glass border border-white/10 bg-black/5 dark:bg-white/5 flex items-center justify-center">
                   <img src="./miss-teenager/miss-teenager-2.jpg" alt="Experience 5" class="w-full h-full object-contain">
                 </div>
-                <div class="snap-center shrink-0 w-full h-full rounded-2xl overflow-hidden glass border border-white/10 bg-black/5 dark:bg-white/5 flex items-center justify-center">
-                  <img src="./anvil.png" alt="Experience 5" class="w-full h-full object-contain">
-                </div>
               </div>
               
               <!-- Navigation -->
@@ -545,10 +542,7 @@
             <div class="carousel-container relative group mt-6 aspect-video">
               <div class="carousel-track flex overflow-x-auto snap-x snap-mandatory scrollbar-hide gap-4 rounded-2xl h-full">
                 <div class="snap-center shrink-0 w-full h-full rounded-2xl overflow-hidden glass border border-white/10 bg-black/5 dark:bg-white/5 flex items-center justify-center">
-                  <img src="public/zilenial.jpeg" alt="Experience 6" class="w-full h-full object-contain">
-                </div>
-                <div class="snap-center shrink-0 w-full h-full rounded-2xl overflow-hidden glass border border-white/10 bg-black/5 dark:bg-white/5 flex items-center justify-center">
-                  <img src="./duta/proud.jpg" alt="Experience 6" class="w-full h-full object-contain">
+                  <img src="public/speaker.jpeg" alt="Experience 6" class="w-full h-full object-contain">
                 </div>
               </div>
               
@@ -833,12 +827,12 @@
               <div
                 class="absolute inset-0 bg-primary/20 group-hover:bg-transparent transition-colors duration-500 z-10">
               </div>
-              <img src="./miss-teenager/miss-teenager-2.jpg"
+              <img src="public/projek/1755076940670.jpeg"
                 alt="E-Commerce Dashboard"
                 class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
               <div class="absolute top-4 right-4 z-20 flex gap-2">
-                <span class="tech-tag">React</span>
-                <span class="tech-tag">Tailwind</span>
+                <span class="tech-tag">Arduino</span>
+                <span class="tech-tag">Raspberry Pi</span>
               </div>
             </div>
             <div class="p-8 relative">
@@ -872,12 +866,12 @@
               <div
                 class="absolute inset-0 bg-secondary/20 group-hover:bg-transparent transition-colors duration-500 z-10">
               </div>
-              <img src="./duta/proud.jpg"
+              <img src="public/projek/1755017925946.jpeg"
                 alt="AI SaaS Platform"
                 class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
               <div class="absolute top-4 right-4 z-20 flex gap-2">
-                <span class="tech-tag">Next.js</span>
-                <span class="tech-tag">OpenAI</span>
+                <span class="tech-tag">Creative Strategy</span>
+                <span class="tech-tag">Public Speaking</span>
               </div>
             </div>
             <div class="p-8 relative">
@@ -911,12 +905,12 @@
               <div
                 class="absolute inset-0 bg-primary/20 group-hover:bg-transparent transition-colors duration-500 z-10">
               </div>
-              <img src="./inti/inti-2.jpg"
+              <img src="public/projek/inspirasa 1.jpeg"
                 alt="Mobile Banking UI"
                 class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
               <div class="absolute top-4 right-4 z-20 flex gap-2">
-                <span class="tech-tag">Figma</span>
-                <span class="tech-tag">Motion</span>
+                <span class="tech-tag">Teamwork</span>
+                <span class="tech-tag">Critial Thinking</span>
               </div>
             </div>
             <div class="p-8 relative">
