--- a/index.html
+++ b/index.html
@@ -415,6 +415,58 @@
             </div>
           </div>
 
+          <!-- Experience Card 3.1 -->
+          <div
+            class="glass p-8 rounded-3xl border border-white/20 hover:border-secondary/30 transition-all duration-300 group"
+            data-aos="fade-up" data-aos-delay="100">
+            <div class="flex flex-col md:flex-row md:items-center justify-between gap-4">
+              <div class="flex items-center gap-4">
+                <div
+                  class="w-16 h-16 rounded-2xl bg-white flex items-center justify-center group-hover:scale-110 transition-transform shadow-sm border border-gray-100 dark:border-gray-800">
+                  <img src="./logo-bkkbn.png" alt="BKKBN" class="w-10 h-10 object-contain">
+                </div>
+                <div>
+                  <h3 class="text-xl font-bold dark:text-white">Brand Ambassador.</h3>
+                  <p class="text-secondary font-medium">Subang, West Java, Indonesia</p>
+                </div>
+              </div>
+              <div class="text-right">
+                <span class="px-4 py-1 rounded-full bg-secondary/10 text-secondary text-sm font-medium">2023 -
+                  Present</span>
+              </div>
+            </div>
+            <p class="mt-4 text-gray-600 dark:text-gray-400 leading-relaxed">
+              Program, promoting reproductive health, future planning, and quality family development. Recognized with
+              the **Best Advocacy Award** for impactful outreach and peer education initiatives.
+            </p>
+
+            <!-- Photo Carousel -->
+            <div class="carousel-container relative group mt-6 aspect-video">
+              <div class="carousel-track flex overflow-x-auto snap-x snap-mandatory scrollbar-hide gap-4 rounded-2xl h-full">
+                <div class="snap-center shrink-0 w-full h-full rounded-2xl overflow-hidden glass border border-white/10 bg-black/5 dark:bg-white/5 flex items-center justify-center">
+                  <img src="public/ambasador/1755018410151.jpeg" alt="Experience 3" class="w-full h-full object-contain">
+                </div>
+                <div class="snap-center shrink-0 w-full h-full rounded-2xl overflow-hidden glass border border-white/10 bg-black/5 dark:bg-white/5 flex items-center justify-center">
+                  <img src="public/ambasador/1755019061117.jpeg" alt="Experience 3" class="w-full h-full object-contain">
+                </div>
+                <div class="snap-center shrink-0 w-full h-full rounded-2xl overflow-hidden glass border border-white/10 bg-black/5 dark:bg-white/5 flex items-center justify-center">
+                  <img src="public/ambasador/1755019232273.jpeg" alt="Experience 3" class="w-full h-full object-contain">
+                </div>
+              </div>
+              
+              <!-- Navigation -->
+              <button class="carousel-prev absolute left-2 top-1/2 -translate-y-1/2 w-10 h-10 rounded-full glass border border-white/20 flex items-center justify-center text-primary md:opacity-0 group-hover:opacity-100 transition-all hover:scale-110 z-20">
+                <i data-lucide="chevron-left"></i>
+              </button>
+              <button class="carousel-next absolute right-2 top-1/2 -translate-y-1/2 w-10 h-10 rounded-full glass border border-white/20 flex items-center justify-center text-primary md:opacity-0 group-hover:opacity-100 transition-all hover:scale-110 z-20">
+                <i data-lucide="chevron-right"></i>
+              </button>
+
+              <!-- Dots -->
+              <div class="carousel-dots absolute inset-x-0 bottom-4 flex justify-center gap-2 z-20"></div>
+            </div>
+          </div>
+
           <!-- Experience Card 4 -->
           <div
             class="glass p-8 rounded-3xl border border-white/20 hover:border-secondary/30 transition-all duration-300 group"
@@ -827,7 +879,7 @@
               <div
                 class="absolute inset-0 bg-primary/20 group-hover:bg-transparent transition-colors duration-500 z-10">
               </div>
-              <img src="projek/1755076940670.jpeg"
+              <img src="public/project 1.1.jpeg"
                 alt="E-Commerce Dashboard"
                 class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-700">
               <div class="absolute top-4 right-4 z-20 flex gap-2">
